--- a/scripts/deployment.yml
+++ b/scripts/deployment.yml
@@ -1,1 +1,158 @@
-# Your Solution
+apiVersion: apps/v1
+kind: Deployment 
+metadata:
+  name: book-catalog
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: book-catalog
+  template:
+    metadata:
+      labels:
+        app: book-catalog
+    spec:
+      imagePullSecrets:
+      - name: acr-auth
+      containers:
+      - name: book-catalog
+        image: 722drwk72acr.azurecr.io/book_catalog:1
+        ports:
+        - containerPort: 8000 
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://drm722drwk72_user:jsSmJo5II5Yty5bPoF6zrXHoFi0N3FR5@dpg-crqiq968ii6s73cvgk8g-a.oregon-postgres.render.com/drm722drwk72"
+          
+---
+apiVersion: v1
+kind: Service 
+metadata:
+  name: book-catalog
+spec:
+  selector:
+    app: book-catalog
+  type: LoadBalancer 
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+
+
+---
+apiVersion: apps/v1
+kind: Deployment 
+metadata:
+  name: inventory-management
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: inventory-management
+  template:
+    metadata:
+      labels:
+        app: inventory-management
+    spec:
+      imagePullSecrets:
+      - name: acr-auth
+      containers:
+      - name: inventory-management
+        image: 722drwk72acr.azurecr.io/inventory_management:1
+        ports:
+        - containerPort: 8000 
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://drm722drwk72_user:jsSmJo5II5Yty5bPoF6zrXHoFi0N3FR5@dpg-crqiq968ii6s73cvgk8g-a.oregon-postgres.render.com/drm722drwk72"
+          
+---
+apiVersion: v1
+kind: Service apiVersion: apps/v1
+kind: Deployment 
+metadata:
+  name: book-catalog
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: book-catalog
+  template:
+    metadata:
+      labels:
+        app: book-catalog
+    spec:
+      imagePullSecrets:
+      - name: acr-auth
+      containers:
+      - name: book-catalog
+        image: 722drwk72acr.azurecr.io/book_catalog:1
+        ports:
+        - containerPort: 8000
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://drm722drwk72_user:jsSmJo5II5Yty5bPoF6zrXHoFi0N3FR5@dpg-crqiq968ii6s73cvgk8g-a.oregon-postgres.render.com/drm722drwk72"
+
+---
+apiVersion: v1
+kind: Service 
+metadata:
+  name: book-catalog
+spec:
+  selector:
+    app: book-catalog
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+
+---
+apiVersion: apps/v1
+kind: Deployment 
+metadata:
+  name: inventory-management
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: inventory-management
+  template:
+    metadata:
+      labels:
+        app: inventory-management
+    spec:
+      imagePullSecrets:
+      - name: acr-auth
+      containers:
+      - name: inventory-management
+        image: 722drwk72acr.azurecr.io/inventory_management:1
+        ports:
+        - containerPort: 8000
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://drm722drwk72_user:jsSmJo5II5Yty5bPoF6zrXHoFi0N3FR5@dpg-crqiq968ii6s73cvgk8g-a.oregon-postgres.render.com/drm722drwk72"
+
+---
+apiVersion: v1
+kind: Service 
+metadata:
+  name: inventory-management
+spec:
+  selector:
+    app: inventory-management
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+
+metadata:
+  name: inventory-management
+spec:
+  selector:
+    app: inventory-management
+  type: LoadBalancer 
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+  
